2011-04-04  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: [Extensions API] Merge WatchExpressionSidebarPane into ExtensionSidebarPane
        https://bugs.webkit.org/show_bug.cgi?id=57622

        Merged WatchExpressionSidebarPane into ExtensionSidebarPane, added setPage(url).
        Fixed wrong getter in schema (scripts -> elements)

        * inspector/front-end/ExtensionAPI.js:
        (WebInspector.injectedExtensionAPI.WatchExpressionSidebarPaneImpl.prototype.setObject):
        (WebInspector.injectedExtensionAPI.WatchExpressionSidebarPaneImpl.prototype.setPage):
        * inspector/front-end/ExtensionAPISchema.json:
        * inspector/front-end/ExtensionServer.js:
        (WebInspector.ExtensionServer.prototype._onSetSidebarPage):

2011-04-04  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: introduce support of 'optional' flag for command arguments.
        https://bugs.webkit.org/show_bug.cgi?id=57698

        * inspector/CodeGeneratorInspector.pm:
        * inspector/Inspector.json:
        * inspector/InspectorDebuggerAgent.cpp:
        (WebCore::InspectorDebuggerAgent::setBreakpointByUrl):
        (WebCore::InspectorDebuggerAgent::setBreakpoint):
        (WebCore::InspectorDebuggerAgent::evaluateOnCallFrame):
        * inspector/InspectorDebuggerAgent.h:
        * inspector/InspectorPageAgent.cpp:
        (WebCore::InspectorPageAgent::reloadPage):
        * inspector/InspectorPageAgent.h:
        * inspector/InspectorResourceAgent.cpp:
        (WebCore::InspectorResourceAgent::getResourceContent):
        * inspector/InspectorResourceAgent.h:
        * inspector/InspectorRuntimeAgent.cpp:
        (WebCore::InspectorRuntimeAgent::evaluate):
        * inspector/InspectorRuntimeAgent.h:
        * inspector/generate-inspector-idl:

2011-04-04  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.
